// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success cases basic should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases basic-promise should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases basic-sync should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases compression should generate the expected files 1`] = `
Object {
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.html.gz": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases custom-file-names should generate the expected files 1`] = `
Object {
  "custom.html": "<html>
  <body>
    <h1>/custom.html</h1>
  </body>
</html>
",
  "foo/bar/custom.html": "<html>
  <body>
    <h1>/foo/bar/custom.html</h1>
  </body>
</html>
",
  "foo/custom.html": "<html>
  <body>
    <h1>/foo/custom.html</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases default-entry-when-named should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases entry-via-file-name should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases entry-via-name should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases es-modules should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases ignore-inherited-locals should generate the expected files 1`] = `
Object {
  "index.html": "<html>
  <body>
    <h1>\\"DONT_INCLUDE_ME\\" is in locals: false</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases legacy-args should generate the expected files 1`] = `
Object {
  "781.index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases multi-render should generate the expected files 1`] = `
Object {
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases multi-render-custom-file-names should generate the expected files 1`] = `
Object {
  "custom.html": "<html>
  <body>
    <h1>/custom.html</h1>
  </body>
</html>
",
  "foo/bar/custom.html": "<html>
  <body>
    <h1>/foo/bar/custom.html</h1>
  </body>
</html>
",
  "foo/custom.html": "<html>
  <body>
    <h1>/foo/custom.html</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases no-options-provided should generate the expected files 1`] = `
Object {
  "index.html": "[\\"path\\",\\"assets\\",\\"webpackStats\\"]",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "stats.json": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases require-ensure should generate the expected files 1`] = `
Object {
  "5.index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "foo/bar/index.html": "<html>
  <body>
    <h1>/foo/bar</h1>
  </body>
</html>
",
  "foo/index.html": "<html>
  <body>
    <h1>/foo</h1>
  </body>
</html>
",
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`Success cases single-path should generate the expected files 1`] = `
Object {
  "index.html": "<html>
  <body>
    <h1>/</h1>
  </body>
</html>
",
  "index.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
